# BloodClotImagineering

./: .gitignore  CMakeLists.txt  DataProcessing.h  README.md  bloodClotBand.kicad_prl  btmanager.h  main.cpp  main.qml  notifmanager.h
Data_collection_Arduino/: ecgtest.ino
Feather_code/: bloodclotimag.ino
